objects/ssot__InvoiceBatchRun__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CompletionDateTime__c</fullName>
        <label>Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreditApplicationStatus__c</fullName>
        <label>Credit Application Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocGenCompletionDateTime__c</fullName>
        <label>DocGen Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DocGenStartDateTime__c</fullName>
        <label>DocGen Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DocGenStatus__c</fullName>
        <label>Doc Gen Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Invoice Batch Run Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceBatchRunRecoveryStatus__c</fullName>
        <label>Recovery Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceBatchRunStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceDocsGenFailedNumber__c</fullName>
        <label>Invoice Docs Gen Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceDocsGeneratedNumber__c</fullName>
        <label>Invoice Docs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotBillSchdUpdtDurDrftToPostNumber__c</fullName>
        <label>Tot Bill Schd Updt Dur Drft To Post</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBillSchedRecoveredNumber__c</fullName>
        <label>Total Bill Sched Recovered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBillSchedSuccessProcessedNumber__c</fullName>
        <label>Total Bill Sched Successfully Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBillSchedUnrecoveredNumber__c</fullName>
        <label>Total Bill Sched Unrecovered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBillingSchedulesFailedNumber__c</fullName>
        <label>Total Billing Schedules Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDraftInvoiceAmount__c</fullName>
        <label>Total Draft Invoice Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDraftInvoicesNumber__c</fullName>
        <label>Total Draft Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFilteredBillingSchedulesNumber__c</fullName>
        <label>Total Filtered Billing Schedules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalInvSuccessfullyProcessedNumber__c</fullName>
        <label>Total Inv Successfully Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalInvoicedAmount__c</fullName>
        <label>Total Invoiced Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalInvoicesCanceledNumber__c</fullName>
        <label>Total Invoices Canceled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalInvoicesFailedNumber__c</fullName>
        <label>Total Invoices Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalInvoicesGeneratedNumber__c</fullName>
        <label>Total Invoices Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPostedInvoicesNumber__c</fullName>
        <label>Total Posted Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>